调整好首页的轮播图

--- a/首页.html
+++ b/首页.html
@@ -386,32 +386,36 @@
                                        <div class="carousel-inner">
 
                                           <div class="item active">
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
+                                              <div class="item-box">
+                                                   <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                   </a>
+                                                   <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                   </a>
+                                                   <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                   </a>
+                                                   <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                   </a>
+                                              </div>
                                           </div>
                                           <div class="item">
-                                              <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
-                                               <a href="javascript:;">
-                                                  <img src="img/pic2.jpg" alt="">
-                                              </a>
+                                              <div class="item-box">
+                                                  <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                  </a>
+                                                  <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                  </a>
+                                                  <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                  </a>
+                                                  <a href="javascript:;">
+                                                      <img src="img/pic2.jpg" alt="">
+                                                  </a>
+                                              </div>
                                           </div>
                                      </div>
                                        <a href="#carousel_1" class="con-slide-arrow left con-slide-arrow1 carousel-control" data-slide="prev"></a>
@@ -654,26 +658,30 @@
                                 <div class="con-slide-pic con-slide-pic2 carousel slide" id="carousel_2">
                                     <div class="carousel-inner">
                                         <div class="item active">
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
+                                            <div class="item-box">
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="item">
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
+                                            <div class="item-box">
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                     <a href="#carousel_2" class="con-slide-arrow con-slide-arrow2 left carousel-control" data-slide="prev"></a>
@@ -768,26 +776,30 @@
                                 <div class="con-slide-pic con-slide-pic2 carousel slide" id="carousel_3">
                                     <div class="carousel-inner">
                                         <div class="item active">
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
+                                            <div class="item-box">
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="item">
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
-                                           <a href="javascript:;">
-                                              <img src="img/pic3.jpg" alt="">
-                                          </a>
+                                            <div class="item-box">
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                                <a href="javascript:;">
+                                                    <img src="img/pic3.jpg" alt="">
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                     <a href="#carousel_3" class="con-slide-arrow con-slide-arrow2 left carousel-control" data-slide="prev"></a>
