调整直播页的排版顺序

--- a/直播.html
+++ b/直播.html
@@ -112,6 +112,67 @@
             </div>
         </div>
         <div class="row zhibo-main-wrap">
+            <div class="col-sm-12 col-md-4 pull-right zhibo-main-r-box">
+                <div class="zhibo-main-right">
+                    <!-- 赛程-->
+                    <div class="con-schedule">
+                        <div class="con-reg-title clearfix">
+                            <i class="con-reg-tip fl"></i>
+                            <span class="con-reg-text fl">赛程</span>
+                            <i class="con-reg-line fl">/</i>
+                            <span class="con-reg-sub fl">SCHEDULE</span>
+                        </div>
+                        <div class="con-light clearfix"><i></i><p>2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）比赛时间调整为7月2日-3日，在线报名已经开启。</p></div>
+                        <div class="con-rate">
+                            <dl>
+                                <dd>
+                                    <i class="con-rate-top"></i>
+                                    <i class="con-rate-circle"></i>
+                                    <span class="con-rate-time">2016-06-18</span>
+                                    <ul class="con-rate-list">
+                                        <li>
+                                            <span>09:00</span><em>开幕式</em>
+                                        </li>
+                                        <li>
+                                            <span>10:00</span><em>女子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>14:30</span><em>男子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
+                                        </li>
+                                    </ul>
+                                </dd>
+                                <dd>
+                                    <i class="con-rate-top"></i>
+                                    <i class="con-rate-circle"></i>
+                                    <span class="con-rate-time">2016-06-18</span>
+                                    <ul class="con-rate-list">
+                                        <li>
+                                            <span>09:00</span><em>开幕式</em>
+                                        </li>
+                                        <li>
+                                            <span>10:00</span><em>女子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>14:30</span><em>男子攀石预赛</em>
+                                        </li>
+                                        <li>
+                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
+                                        </li>
+                                    </ul>
+                                </dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <div class="ewm-wrap">
+                        <div class="thumbnail">
+                            <img src="img/erweima.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-sm-12 col-md-8 zhibo-main-l-box">
                 <div class="zhibo-main-left">
                     <div class="zhibo-select-box clearfix">
@@ -321,67 +382,6 @@
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4 zhibo-main-r-box">
-                <div class="zhibo-main-right">
-                    <!-- 赛程-->
-                    <div class="con-schedule">
-                        <div class="con-reg-title clearfix">
-                            <i class="con-reg-tip fl"></i>
-                            <span class="con-reg-text fl">赛程</span>
-                            <i class="con-reg-line fl">/</i>
-                            <span class="con-reg-sub fl">SCHEDULE</span>
-                        </div>
-                        <div class="con-light clearfix"><i></i><p>2016 全国攀岩分站赛（第四站）- 内蒙古.乌兰察布（B,S）比赛时间调整为7月2日-3日，在线报名已经开启。</p></div>
-                        <div class="con-rate">
-                            <dl>
-                                <dd>
-                                    <i class="con-rate-top"></i>
-                                    <i class="con-rate-circle"></i>
-                                    <span class="con-rate-time">2016-06-18</span>
-                                    <ul class="con-rate-list">
-                                        <li>
-                                            <span>09:00</span><em>开幕式</em>
-                                        </li>
-                                        <li>
-                                            <span>10:00</span><em>女子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>14:30</span><em>男子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
-                                        </li>
-                                    </ul>
-                                </dd>
-                                <dd>
-                                    <i class="con-rate-top"></i>
-                                    <i class="con-rate-circle"></i>
-                                    <span class="con-rate-time">2016-06-18</span>
-                                    <ul class="con-rate-list">
-                                        <li>
-                                            <span>09:00</span><em>开幕式</em>
-                                        </li>
-                                        <li>
-                                            <span>10:00</span><em>女子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>14:30</span><em>男子攀石预赛</em>
-                                        </li>
-                                        <li>
-                                            <span>18:00</span><em>速度赛练习（暂不直播）</em>
-                                        </li>
-                                    </ul>
-                                </dd>
-                            </dl>
-                        </div>
-                    </div>
-                    <div class="ewm-wrap">
-                        <div class="thumbnail">
-                            <img src="img/erweima.jpg" alt=""/>
-                        </div>
                     </div>
                 </div>
             </div>
