新增轮播图预览交互

--- a/首页.html
+++ b/首页.html
@@ -387,32 +387,32 @@
 
                                           <div class="item active">
                                               <div class="item-box">
-                                                   <a href="javascript:;">
+                                                   <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                       <img src="img/pic2.jpg" alt="">
                                                    </a>
-                                                   <a href="javascript:;">
+                                                   <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/lunbo_01.png">
                                                       <img src="img/pic2.jpg" alt="">
                                                    </a>
-                                                   <a href="javascript:;">
+                                                   <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/lunbo_02.png">
                                                       <img src="img/pic2.jpg" alt="">
                                                    </a>
-                                                   <a href="javascript:;">
+                                                   <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/lunbo_03_10.png">
                                                       <img src="img/pic2.jpg" alt="">
                                                    </a>
                                               </div>
                                           </div>
                                           <div class="item">
                                               <div class="item-box">
-                                                  <a href="javascript:;">
+                                                  <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                       <img src="img/pic2.jpg" alt="">
                                                   </a>
-                                                  <a href="javascript:;">
+                                                  <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                       <img src="img/pic2.jpg" alt="">
                                                   </a>
-                                                  <a href="javascript:;">
+                                                  <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                       <img src="img/pic2.jpg" alt="">
                                                   </a>
-                                                  <a href="javascript:;">
+                                                  <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                       <img src="img/pic2.jpg" alt="">
                                                   </a>
                                               </div>
@@ -659,26 +659,26 @@
                                     <div class="carousel-inner">
                                         <div class="item active">
                                             <div class="item-box">
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="item">
                                             <div class="item-box">
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
                                             </div>
@@ -777,26 +777,26 @@
                                     <div class="carousel-inner">
                                         <div class="item active">
                                             <div class="item-box">
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="item">
                                             <div class="item-box">
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
-                                                <a href="javascript:;">
+                                                <a href="javascript:;" data-src="http://static.img.xywy.com/club/familyDoctor/banner.jpg">
                                                     <img src="img/pic3.jpg" alt="">
                                                 </a>
                                             </div>
@@ -900,6 +900,8 @@
 <div class="footer">
     <p><span>京ICP备11045195号-3</span><span>Copyright © 2000-2012 by www.cmaol.com all rights reserved</span></p>
 </div>
+<div class="g-filter none"></div>
+<div class="g-big-pic none"><img src="" alt=""/><i></i></div>
 </body>
 </html>
 <script src="js/top.js"></script>
