增加赛事报名为空的情况

--- a/首页.html
+++ b/首页.html
@@ -155,17 +155,19 @@
 		                        </div>
 							</div>
                         </div>
-                        <div class="con-schedule2">
+                        <!--赛程为空 start-->
+                        <div class="con-schedule2 none">
                             <div class="con-reg-title clearfix " data-toggle="collapse" data-target="#con-right2" aria-expanded="true" aria-controls="con-right1">
                                 <i class="con-reg-tip fl"></i>
-                                <span class="con-reg-text fl">赛况</span>
+                                <span class="con-reg-text fl">赛程</span>
                                 <i class="con-reg-line fl">/</i>
-                                <span class="con-reg-sub fl">ACTION</span>
+                                <span class="con-reg-sub fl">SCHEDULE</span>
                             </div>
-                            <div class="caikuang-box hidden-sm hidden-md hidden-lg collapse in" id="con-right2">
+                            <div class="caikuang-box collapse in" id="con-right2">
                                 <p class="tips">暂无赛况</p>
                             </div>
                         </div>
+                        <!--赛程为空 end-->
                     </div>
 
                 </div>
@@ -257,6 +259,21 @@
                                    </ul>
                                </div>
                            </div>
+                           <!--赛事报名为空 start-->
+                           <div class="con-reg con-reg-blank none">
+                               <div class="con-reg-title clearfix">
+                                   <i class="con-reg-tip fl"></i>
+                                   <span class="con-reg-text fl">赛事报名</span>
+                                   <i class="con-reg-line fl">/</i>
+                                   <span class="con-reg-sub fl">REGISTER</span>
+                                   <a href="javascript:;" class="con-reg-more fr">MORE+</a>
+                               </div>
+                                <div class="sec-blank">
+                                    <img src="img/reg-blank.jpg" alt=""/>
+                                    <p>暂无可报名比赛</p>
+                                </div>
+                           </div>
+                           <!--赛事报名为空 end-->
                            <div class="con-calendar">
                                <div class="con-reg-title clearfix">
                                    <i class="con-reg-tip fl"></i>
